P4PU-1077 fixed query to retrieve debtPosition details
